All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Unit__c</fullName>
    <description>Unit of frequency in the condition rule - Count, Days, Month, Year</description>
    <inlineHelpText>Unit of frequency in the condition rule - Count, Days, Month, Year</inlineHelpText>
    <label>Frequency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>