All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_Adjusted_Units__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjusted_Units__c</fullName>
    <description>Unit of measurement by which schedules are adjusted - Count in case of technical attributes, Days /Month / Year in case of date attributes</description>
    <inlineHelpText>Unit of measurement by which schedules are adjusted - Count in case of technical attributes, Days /Month / Year in case of date attributes</inlineHelpText>
    <label>Adjusted Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>