All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_Attribute_Field__c.field-meta.xml
<CustomField>
    <fullName>SM_Attribute_Field__c</fullName>
    <label>Attribute Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>