All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_PM_Coverage__c.field-meta.xml
<CustomField>
    <fullName>SM_PM_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Preventive Maintenance coverage record</description>
    <inlineHelpText>Lookup to Preventive Maintenance coverage record</inlineHelpText>
    <label>PM Coverage</label>
    <referenceTo>PM_Coverage__c</referenceTo>
    <relationshipLabel>PM Schedule Definition (PM Coverage)</relationshipLabel>
    <relationshipName>PM_Schedule_Definition1</relationshipName>
    <type>Lookup</type>
</CustomField>