All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_Start_At__c.field-meta.xml
<CustomField>
    <fullName>SM_Start_At__c</fullName>
    <description>Start value of condition rule.</description>
    <inlineHelpText>Start value of condition rule.</inlineHelpText>
    <label>Start At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>