All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_Stop_At__c.field-meta.xml
<CustomField>
    <fullName>SM_Stop_At__c</fullName>
    <description>Stop value of condition rule.</description>
    <inlineHelpText>Stop value of condition rule.</inlineHelpText>
    <label>Stop At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>