All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_Threshold__c.field-meta.xml
<CustomField>
    <fullName>SM_Threshold__c</fullName>
    <description>Percentage value multiplied by the frequency to obtain the lower limit to trigger the work order. This is to enable creating a PM Work order ahead of reaching the counter value.</description>
    <inlineHelpText>Percentage value multiplied by the frequency to obtain the lower limit to trigger the work order. This is to enable creating a PM Work order ahead of reaching the counter value.</inlineHelpText>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>