All_Component_DX/force-app/main/default/objects/PM_Schedule_Definition__c/fields/SM_Value__c.field-meta.xml
<CustomField>
    <fullName>SM_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>